--- a/AcademicInfo.Frontend/Scripts/Home/AdminHome/admin-home.tmpl.html
+++ b/AcademicInfo.Frontend/Scripts/Home/AdminHome/admin-home.tmpl.html
@@ -94,7 +94,7 @@
                                                     <td class="col-md-2">Date of birth</td>
                                                     <td class="col-md-2">
                                                         <div class='input-group date'>
-                                                            <input type="text" class="form-control"/>
+                                                            <input type="text" class="form-control" name="DoB" title="DoB" ng-model="c.personVO.dob">
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -215,7 +215,7 @@
                                                         <td class="col-md-2">Date of birth</td>
                                                         <td class="col-md-2">
                                                             <div class='input-group date' id=''>
-                                                                <input type="text" class="form-control"/>
+                                                                <input type="text" class="form-control" name="DoB" title="DoB" ng-model="t.personVO.dob">
                                                             </div>
                                                         </td>
                                                     </tr>
@@ -339,7 +339,7 @@
                                                         <td class="col-md-2">Date of birth</td>
                                                         <td class="col-md-2">
                                                             <div class='input-group date' >
-                                                                <input type="text" class="form-control"/>
+                                                                <input type="text" class="form-control" name="DoB" title="DoB" ng-model="s.personVO.dob">
                                                             </div>
                                                         </td>
                                                     </tr>
@@ -434,7 +434,7 @@
                             <td class="col-md-2">Date of birth</td>
                             <td class="col-md-2">
                                 <div class='input-group date'>
-                                    <input type="text" class="form-control">
+                                    <input type="text" class="form-control" name="DoB" title="DoB" ng-model="chiefToAdd.personVO.dob"><input type="text" class="form-control">
                                 </div>
                             </td>
                         </tr>
@@ -527,7 +527,7 @@
                             <td class="col-md-2">Date of birth</td>
                             <td class="col-md-2">
                                 <div class='input-group date'>
-                                    <input type="text" class="form-control">
+                                    <input type="text" class="form-control" name="DoB" title="DoB" ng-model="teacherToAdd.personVO.dob">
                                 </div>
                             </td>
                         </tr>
@@ -620,7 +620,7 @@
                             <td class="col-md-2">Date of birth</td>
                             <td class="col-md-2">
                                 <div class='input-group date'>
-                                    <input type="text" class="form-control">
+                                    <input type="text" class="form-control" name="DoB" title="DoB" ng-model="studentToAdd.personVO.dob"><input type="text" class="form-control">
                                 </div>
                             </td>
                         </tr>
