even more stuff added

--- a/AcademicInfo.Frontend/Scripts/Home/AdminHome/admin-home.tmpl.html
+++ b/AcademicInfo.Frontend/Scripts/Home/AdminHome/admin-home.tmpl.html
@@ -338,9 +338,7 @@
                                                     <tr>
                                                         <td class="col-md-2">Date of birth</td>
                                                         <td class="col-md-2">
-                                                            <div class='input-group date' >
                                                                 <input type="text" class="form-control" name="DoB" title="DoB" ng-model="s.personVO.dob">
-                                                            </div>
                                                         </td>
                                                     </tr>
                                                     <tr>
@@ -620,7 +618,7 @@
                             <td class="col-md-2">Date of birth</td>
                             <td class="col-md-2">
                                 <div class='input-group date'>
-                                    <input type="text" class="form-control" name="DoB" title="DoB" ng-model="studentToAdd.personVO.dob"><input type="text" class="form-control">
+                                    <input type="text" class="form-control" name="DoB" title="DoB" ng-model="studentToAdd.personVO.dob">
                                 </div>
                             </td>
                         </tr>
