--- a/AcademicInfo.Frontend/Scripts/Home/AdminHome/admin-home.tmpl.html
+++ b/AcademicInfo.Frontend/Scripts/Home/AdminHome/admin-home.tmpl.html
@@ -406,40 +406,40 @@
                         <tr>
                             <td class="col-md-2">Username</td>
                             <td class="col-md-2">
-                                <input type="text" class="form-control" name="Username" title="Username" ng-model="chiefToAdd.personVO.userVO.username">
+                                <input type="text" class="form-control" name="Username" title="Username" ng-model="chiefToAdd.person.user.username">
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-2">Password</td>
                             <td class="col-md-2">
-                                <input type="password" class="form-control" name="Password" title="Password" ng-model="chiefToAdd.personVO.userVO.password">
+                                <input type="password" class="form-control" name="Password" title="Password" ng-model="chiefToAdd.person.user.password">
                             </td>
                         </tr>
                         <tr></tr>
                         <tr>
                             <td class="col-md-2">First Name</td>
                             <td class="col-md-2">
-                                <input type="text" class="form-control" name="First Name" title="First Name" ng-model="chiefToAdd.personVO.firstName">
+                                <input type="text" class="form-control" name="First Name" title="First Name" ng-model="chiefToAdd.person.firstName">
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-2">Last Name</td>
                             <td class="col-md-2">
-                                <input type="text" class="form-control" name="Last Name" title="LastName" ng-model="chiefToAdd.personVO.lastName">
+                                <input type="text" class="form-control" name="Last Name" title="LastName" ng-model="chiefToAdd.person.lastName">
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-2">Date of birth</td>
                             <td class="col-md-2">
                                 <div class='input-group date'>
-                                    <input type="text" class="form-control" name="DoB" title="DoB" ng-model="chiefToAdd.personVO.dob"><input type="text" class="form-control">
+                                    <input type="text" class="form-control" name="DoB" title="DoB" ng-model="chiefToAdd.person.dob">
                                 </div>
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-2">SSN</td>
                             <td class="col-md-2">
-                                <input type="text" class="form-control" name="Ssn" title="Ssn" ng-model="chiefToAdd.personVO.ssn">
+                                <input type="text" class="form-control" name="Ssn" title="Ssn" ng-model="chiefToAdd.person.ssn">
                             </td>
                         </tr>
                         <tr>
@@ -471,7 +471,7 @@
                         <tr>
                             <td class="col-md-2">Is Chief</td>
                             <td class="col-md-2">
-                                <div class="btn btn-info disabled">
+                                <div class="btn btn-info">
                                     <input type="checkbox" class="form-control" name="Is Chief" title="Is Chief" data-toggle="button" ng-model="chiefToAdd.chief">
                                 </div>
                             </td>
@@ -499,52 +499,52 @@
                         <tr>
                             <td class="col-md-2">Username</td>
                             <td class="col-md-2">
-                                <input type="text" class="form-control" name="Username" title="Username" ng-model="teacherToAdd.personVO.userVO.username">
+                                <input type="text" class="form-control" name="Username" title="Username" ng-model="teacherToAdd.person.user.username">
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-2">Password</td>
                             <td class="col-md-2">
-                                <input type="password" class="form-control" name="Password" title="Password" ng-model="teacherToAdd.personVO.userVO.password">
+                                <input type="password" class="form-control" name="Password" title="Password" ng-model="teacherToAdd.person.user.password">
                             </td>
                         </tr>
                         <tr></tr>
                         <tr>
                             <td class="col-md-2">First Name</td>
                             <td class="col-md-2">
-                                <input type="text" class="form-control" name="First Name" title="First Name" ng-model="teacherToAdd.personVO.firstName">
+                                <input type="text" class="form-control" name="First Name" title="First Name" ng-model="teacherToAdd.person.firstName">
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-2">Last Name</td>
                             <td class="col-md-2">
-                                <input type="text" class="form-control" name="Last Name" title="LastName" ng-model="teacherToAdd.personVO.lastName">
+                                <input type="text" class="form-control" name="Last Name" title="LastName" ng-model="teacherToAdd.person.lastName">
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-2">Date of birth</td>
                             <td class="col-md-2">
                                 <div class='input-group date'>
-                                    <input type="text" class="form-control" name="DoB" title="DoB" ng-model="teacherToAdd.personVO.dob">
+                                    <input type="text" class="form-control" name="DoB" title="DoB" ng-model="teacherToAdd.person.dob">
                                 </div>
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-2">SSN</td>
                             <td class="col-md-2">
-                                <input type="text" class="form-control" name="Ssn" title="Ssn" ng-model="teacherToAdd.personVO.ssn">
+                                <input type="text" class="form-control" name="Ssn" title="Ssn" ng-model="teacherToAdd.person.ssn">
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-2">Address</td>
                             <td class="col-md-2">
-                                <input type="text" class="form-control" name="Address" title="Address" ng-model="teacherToAdd.personVO.address">
+                                <input type="text" class="form-control" name="Address" title="Address" ng-model="teacherToAdd.person.address">
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-2">Phone</td>
                             <td class="col-md-2">
-                                <input type="text" class="form-control" name="Phone" title="Phone" ng-model="teacherToAdd.personVO.phoneNo">
+                                <input type="text" class="form-control" name="Phone" title="Phone" ng-model="teacherToAdd.person.phoneNo">
                             </td>
                         </tr>
                         <tr>
@@ -564,7 +564,7 @@
                         <tr>
                             <td class="col-md-2">Is Chief</td>
                             <td class="col-md-2">
-                                <div class="btn btn-info disabled">
+                                <div class="btn btn-info">
                                 <input type="checkbox" class="form-control" name="Is Chief" title="Is Chief" data-toggle="button" ng-model="teacherToAdd.chief">
                                 </div>
                             </td>
@@ -592,52 +592,52 @@
                         <tr>
                             <td class="col-md-2">Username</td>
                             <td class="col-md-2">
-                                <input type="text" class="form-control" name="Username" title="Username" ng-model="studentToAdd.personVO.userVO.username">
+                                <input type="text" class="form-control" name="Username" title="Username" ng-model="studentToAdd.person.user.username">
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-2">Password</td>
                             <td class="col-md-2">
-                                <input type="password" class="form-control" name="Password" title="Password" ng-model="studentToAdd.personVO.userVO.password">
+                                <input type="password" class="form-control" name="Password" title="Password" ng-model="studentToAdd.person.user.password">
                             </td>
                         </tr>
                         <tr></tr>
                         <tr>
                             <td class="col-md-2">First Name</td>
                             <td class="col-md-2">
-                                <input type="text" class="form-control" name="First Name" title="First Name" ng-model="studentToAdd.personVO.firstName">
+                                <input type="text" class="form-control" name="First Name" title="First Name" ng-model="studentToAdd.person.firstName">
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-2">Last Name</td>
                             <td class="col-md-2">
-                                <input type="text" class="form-control" name="Last Name" title="LastName" ng-model="studentToAdd.personVO.lastName">
+                                <input type="text" class="form-control" name="Last Name" title="LastName" ng-model="studentToAdd.person.lastName">
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-2">Date of birth</td>
                             <td class="col-md-2">
                                 <div class='input-group date'>
-                                    <input type="text" class="form-control" name="DoB" title="DoB" ng-model="studentToAdd.personVO.dob">
+                                    <input type="text" class="form-control" name="DoB" title="DoB" ng-model="studentToAdd.person.dob">
                                 </div>
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-2">SSN</td>
                             <td class="col-md-2">
-                                <input type="text" class="form-control" name="Ssn" title="Ssn" ng-model="studentToAdd.personVO.ssn">
+                                <input type="text" class="form-control" name="Ssn" title="Ssn" ng-model="studentToAdd.person.ssn">
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-2">Address</td>
                             <td class="col-md-2">
-                                <input type="text" class="form-control" name="Address" title="Address" ng-model="studentToAdd.personVO.address">
+                                <input type="text" class="form-control" name="Address" title="Address" ng-model="studentToAdd.person.address">
                             </td>
                         </tr>
                         <tr>
                             <td class="col-md-2">Phone</td>
                             <td class="col-md-2">
-                                <input type="text" class="form-control" name="Phone" title="Phone" ng-model="studentToAdd.personVO.phoneNo">
+                                <input type="text" class="form-control" name="Phone" title="Phone" ng-model="studentToAdd.person.phoneNo">
                             </td>
                         </tr>
                         <tr>
