--- a/AcademicInfo.Frontend/Scripts/Home/AdminHome/admin-home.tmpl.html
+++ b/AcademicInfo.Frontend/Scripts/Home/AdminHome/admin-home.tmpl.html
@@ -565,7 +565,7 @@
                             <td class="col-md-2">Is Chief</td>
                             <td class="col-md-2">
                                 <div class="btn btn-info">
-                                <input type="checkbox" class="form-control" name="Is Chief" title="Is Chief" data-toggle="button" ng-model="teacherToAdd.chief">
+                                <input type="checkbox" name="Is Chief" title="Is Chief" ng-model="teacherToAdd.chief" checked>
                                 </div>
                             </td>
                         </tr>
