fixed little thing

--- a/AcademicInfo.Frontend/Scripts/Home/AdminHome/admin-home.tmpl.html
+++ b/AcademicInfo.Frontend/Scripts/Home/AdminHome/admin-home.tmpl.html
@@ -471,9 +471,7 @@
                         <tr>
                             <td class="col-md-2">Is Chief</td>
                             <td class="col-md-2">
-                                <div class="btn btn-info">
-                                    <input type="checkbox" class="form-control" name="Is Chief" title="Is Chief" data-toggle="button" ng-model="chiefToAdd.chief">
-                                </div>
+                                <input type="checkbox" name="Is Chief" title="Is Chief" ng-model="chiefToAdd.chief" checked>
                             </td>
                         </tr>
                     </table>
@@ -565,7 +563,7 @@
                             <td class="col-md-2">Is Chief</td>
                             <td class="col-md-2">
                                 <div class="btn btn-info">
-                                <input type="checkbox" name="Is Chief" title="Is Chief" ng-model="teacherToAdd.chief" checked>
+                                <input type="checkbox" name="Is Chief" title="Is Chief" ng-model="teacherToAdd.chief">
                                 </div>
                             </td>
                         </tr>
