--- a/AcademicInfo.Frontend/index.html
+++ b/AcademicInfo.Frontend/index.html
@@ -31,6 +31,8 @@
     <script src="Scripts/Model/teacher.js"></script>
     <script src="Scripts/Model/user.js"></script>
     <script src="Scripts/Model/studentevaluation.js"></script>
+    <script src="Scripts/Model/enrolled.js"></script>
+    <script src="Scripts/Model/studentOptionalCourse.js"></script>
 
     <script src="Scripts/Home/StudentHome/module.js"></script>
     <script src="Scripts/Home/StudentHome/student-home-ctrl.js"></script>
