--- a/AcademicInfo.Frontend/Scripts/Home/StudentHome/student-home.tmpl.html
+++ b/AcademicInfo.Frontend/Scripts/Home/StudentHome/student-home.tmpl.html
@@ -68,7 +68,7 @@
                             <div class="modal-body">
                                 <table class="table-hover">
                                     <tr ng-repeat="c in mandatoryCourses">
-                                        <td class="col-md-3" data-toggle="modal" data-target="#editChiefModal{{c.ssn}}">
+                                        <td class="col-md-3">
                                             <span>{{c.name}} </span>
                                         </td>
                                         <td class="col-md-2 pull-right">
