connect optional courses to student

--- a/AcademicInfo.Frontend/Scripts/Home/StudentHome/student-home.tmpl.html
+++ b/AcademicInfo.Frontend/Scripts/Home/StudentHome/student-home.tmpl.html
@@ -31,7 +31,7 @@
                             <div class="modal-body">
 
                                 <table class="table-hover">
-                                    <tr ng-repeat="ev in studentEvaluations">
+                                    <tr ng-repeat="ev in evalForLoggedUser">
                                         <td class="col-md-3">
                                             <span>{{ev.evaluation.course.name}}</span>
                                         </td>
