show lecture name + delete chief from teacher list

--- a/AcademicInfo.Frontend/Scripts/Home/StudentHome/student-home.tmpl.html
+++ b/AcademicInfo.Frontend/Scripts/Home/StudentHome/student-home.tmpl.html
@@ -33,7 +33,7 @@
                                 <table class="table-hover">
                                     <tr ng-repeat="ev in evalForLoggedUser">
                                         <td class="col-md-3">
-                                            <span>{{ev.evaluation.course.name}}</span>
+                                            <span>{{ev.evaluationVO.courseVO.name}}</span>
                                         </td>
                                         <td class="col-md-2 pull-right">
                                             <span>{{ev.grade}} </span>
